# restaurant_ws

src/seu_restaurant_bringup/: CMakeLists.txt  README.md  package.xml
src/seu_restaurant_bringup/config/: bringup.yaml
src/seu_restaurant_bringup/launch/: restaurant_full.launch  restaurant_minimal.launch  restaurant_perception_debug.launch  restaurant_stage1_real.launch  restaurant_with_real_nav.launch
src/seu_restaurant_common/: CMakeLists.txt  package.xml  setup.py
src/seu_restaurant_common/config/: customer_memory.yaml  menu_items.yaml  mock_dialog.yaml  restaurant_defaults.yaml  service_names.yaml
src/seu_restaurant_common/src/seu_restaurant_common/: __init__.py  config_loader.py  constants.py  customer_memory.py  paths.py  restaurant_context.py  service_names.py
src/seu_restaurant_hri/: CMakeLists.txt  package.xml  setup.py
src/seu_restaurant_hri/config/: hri.yaml
src/seu_restaurant_hri/docs/: real_hri_node.zh-CN.md
src/seu_restaurant_hri/scripts/: mock_hri_node.py  real_hri_node.py  voice_order_client.py
src/seu_restaurant_hri/src/seu_restaurant_hri/: __init__.py  asr_bridge.py  tts_engine.py
src/seu_restaurant_llm/: CMakeLists.txt  package.xml
src/seu_restaurant_llm/config/: llm.yaml
src/seu_restaurant_llm/scripts/: llm_fallback_parse_order_node.py  mock_llm_node.py  rule_based_parse_order_node.py
src/seu_restaurant_manipulation/: CMakeLists.txt  package.xml
src/seu_restaurant_manipulation/config/: manipulation.yaml
src/seu_restaurant_manipulation/scripts/: mock_manipulation_node.py
src/seu_restaurant_msgs/: CMakeLists.txt  package.xml
src/seu_restaurant_msgs/msg/: CustomerCall.msg  OrderInfo.msg  OrderItem.msg  ServiceTask.msg
src/seu_restaurant_msgs/srv/: ListenText.srv  NavToPose.srv  ParseOrder.srv
src/seu_restaurant_navigation/: CMakeLists.txt  package.xml
src/seu_restaurant_navigation/config/: named_targets.yaml  navigation.yaml  navigation_targets.yaml
src/seu_restaurant_navigation/docs/: real_navigation_node.zh-CN.md
src/seu_restaurant_navigation/launch/: real_navigation.launch
src/seu_restaurant_navigation/scripts/: mock_navigation_node.py  real_navigation_node.py
src/seu_restaurant_perception/: CMakeLists.txt  package.xml
src/seu_restaurant_perception/config/: perception.yaml  wave_detector.yaml
src/seu_restaurant_perception/scripts/: mediapipe_wave_detector.py  mock_perception_node.py  perception_visualizer.py  wave_to_customer_call.py
src/seu_restaurant_smach/: CMakeLists.txt  package.xml  setup.py
src/seu_restaurant_smach/config/: mock_params.yaml  state_machine.yaml
src/seu_restaurant_smach/scripts/: restaurant_smach.py
src/seu_restaurant_smach/src/seu_restaurant_smach/: __init__.py  alignment.py  service_clients.py  state_machine.py
src/seu_restaurant_smach/src/seu_restaurant_smach/states/: __init__.py  acquire_items.py  align_at_bar.py  align_at_table.py  align_for_serving.py  base.py  complete_service.py  init_system.py  loop_or_finish.py  navigate_back_to_customer.py  navigate_to_bar.py  navigate_to_customer.py  report_order.py  select_next_customer.py  serve_items.py  take_order.py  wait_for_wave_events.py
src/seu_speech_recognition/: CMakeLists.txt  README.md  package.xml
src/seu_speech_recognition/docs/: speech_service.zh-CN.md
src/seu_speech_recognition/launch/: run.launch
src/seu_speech_recognition/scripts/: real_time_speech_topic.py  speech_service.py
src/seu_speech_recognition/srv/: seu_speech_recognition.srv
src/third_party_nav/livox_ros_driver2/: build.sh
src/third_party_nav/livox_ros_driver2/config/: MID360_config.json
src/third_party_nav/livox_ros_driver2/launch_ROS1/: mid360_to_laserscan.launch
src/third_party_nav/tracer_ros/maps/: my_handheld_map.yaml
src/third_party_nav/tracer_ros/tracer_base/: CMakeLists.txt
src/third_party_nav/tracer_ros/tracer_base/launch/: hec_all.launch  hector_1.launch  hector_mapping_handheld.launch  laser_bringup.launch  tracer_base.launch
src/third_party_nav/tracer_ros/tracer_base/src/: tracer_base_node.cpp  tracer_base_sim_node.cpp  tracer_messenger.cpp
src/third_party_nav/tracer_ros/tracer_base/urdf/: handheld_laser.urdf.xacro
src/third_party_nav/tracer_ros/tracer_bringup/launch/: gmapping.launch  tracer_base_gazeo_sim.launch  tracer_robot_base.launch
src/third_party_nav/tracer_ros/tracer_description/launch/: display_models.launch
src/third_party_nav/tracer_ros/tracer_description/urdf/: tracer_v1.urdf
src/third_party_nav/tracer_ros/tracer_nav/: CMakeLists.txt  package.xml
src/third_party_nav/tracer_ros/tracer_nav/launch/: amcl.launch  clean_map.launch  move_base.launch  my_nav.launch  nav.launch  nav_new.launch  nav_nomap.launch  nav_nomap.launch.bak_20260302_205104  nav_nomap_new.launch
src/third_party_nav/tracer_ros/tracer_nav/maps/: merge_files.py  merged_files.txt
src/third_party_nav/tracer_ros/tracer_nav/param/: backup_rotate_recovery.yaml  base_local_planner_params.yaml  clear_costmap_recovery.yaml  costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml
src/third_party_nav/tracer_ros/tracer_nav/param_nomap/: costmap_common_params.yaml  global_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/third_party_nav/tracer_ros/tracer_nav/rviz/: new.rviz  nomap.rviz
src/third_party_nav/tracer_ros/tracer_nav/scripts/: nav.py  navigation_monitor.py
