<?xml version="1.0"?>
<package format="2">
  <name>seu_restaurant_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for the SEU Restaurant task.</description>
  <maintainer email="htzhou@todo.todo">htzhou</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>seu_restaurant_common</exec_depend>
  <exec_depend>seu_restaurant_hri</exec_depend>
  <exec_depend>seu_restaurant_llm</exec_depend>
  <exec_depend>seu_restaurant_manipulation</exec_depend>
  <exec_depend>seu_restaurant_navigation</exec_depend>
  <exec_depend>seu_restaurant_perception</exec_depend>
  <exec_depend>seu_restaurant_smach</exec_depend>
</package>
