<?xml version="1.0"?>
<package format="2">
  <name>seu_restaurant_navigation</name>
  <version>0.1.0</version>
  <description>Navigation interfaces and wrappers for the SEU Restaurant task.</description>
  <maintainer email="htzhou@todo.todo">htzhou</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>seu_restaurant_common</build_depend>
  <build_depend>seu_restaurant_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>seu_restaurant_common</exec_depend>
  <exec_depend>seu_restaurant_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
</package>
